2015-04-09  Joseph Pecoraro  <pecoraro@apple.com>

        Flakiness Dashboard not loading insecure content if loaded with https URL
        https://bugs.webkit.org/show_bug.cgi?id=143570

        Reviewed by Alexey Proskuryakov.

        * TestResultServer/app.yaml:
        * TestResultServer/static-dashboards/loader.js:
        Switch to https scheme.

2015-04-09  Csaba Osztrogonác  <ossy@webkit.org>

        [EFL][GTK] WebKit2's generate-forwarding-headers.pl runs too many times
        https://bugs.webkit.org/show_bug.cgi?id=142907

        Reviewed by Carlos Garcia Campos.

        * TestWebKitAPI/PlatformEfl.cmake:
        * TestWebKitAPI/PlatformGTK.cmake:
        * WebKitTestRunner/PlatformEfl.cmake:
        * WebKitTestRunner/PlatformGTK.cmake:

2015-04-08  Brent Fulgham  <bfulgham@apple.com>

        [Mac] Unreviewed test fix after r182584
        https://bugs.webkit.org/show_bug.cgi?id=143452

        Put both of these tests back to their original state now that the underlying
        problem is fixed.

        * TestWebKitAPI/Tests/WebKit2/MenuTypesForMouseEvents.cpp:
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/mac/MenuTypesForMouseEvents.mm:
        (TestWebKitAPI::TEST):

2015-04-08  Filip Pizlo  <fpizlo@apple.com>

        run-jsc-benchmarks geomean of preferred means shouldn't print the VMs header twice
        https://bugs.webkit.org/show_bug.cgi?id=143553

        Reviewed by Ryosuke Niwa.
        
        Remove the spurious printVMs left over from an earlier change.

        * Scripts/run-jsc-benchmarks:

2015-04-08  Brent Fulgham  <bfulgham@apple.com>

        [Mac] Unreviewed test fix after r182581

        The behavior of control-left-click is controlled by a system preference.
        Our test bots have this turned off.

        * TestWebKitAPI/Tests/WebKit2/MenuTypesForMouseEvents.cpp:
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/mac/MenuTypesForMouseEvents.mm:
        (TestWebKitAPI::TEST):
