@@ -1,3 +1,12 @@
+2015-04-09  Gyuyoung Kim  <gyuyoung.kim@webkit.org>
+
+        Update my email address and expertise.
+        https://bugs.webkit.org/show_bug.cgi?id=143586
+
+        Unreviewed, just update my info.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-04-09  Joseph Pecoraro  <pecoraro@apple.com>
 
         Flakiness Dashboard not loading insecure content if loaded with https URL
